kubernetes/configurations/apiproxy/envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: librad
  namespace: libra
data:
  envoy.yaml: |
    node:
      id: apiproxy
      cluster: cluster_apiproxy
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
    dynamic_resources:
      cds_config:
        path: /etc/envoy/cds.yaml
      lds_config:
        path: /etc/envoy/lds.yaml

  lds.yaml: |
    resources:
    - name: listener_apiproxy
      "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: listener_apiproxy
            route_config:
              name: route_apiproxy
              virtual_hosts:
              - name: route_apiproxy
                domains:
                - "*"
                routes:
                - match:
                    safe_regex:
                      google_re2: {}
                      regex: '/libra\.v1\.(BubbleChart|Database|Distlock|Gateway|Leaderboard|Mailbox)/.*'
                    grpc: {}
                  route:
                    cluster: cluster_librad_v1
                    idle_timeout: 5s # must be disabled for long-lived and streaming requests
            http_filters:
            - name: envoy.filters.http.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                grpc_service:
                  envoy_grpc:
                    cluster_name: cluster_librad_v1
                  timeout: 0.5s
                transport_api_version: V3
            - name: envoy.filters.http.router

  cds.yaml: |
    resources:
    - name: cluster_librad_v1
      "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      connect_timeout: 0.2s
      http2_protocol_options: {}
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_librad_v1
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: librad-v1.libra.svc.cluster.local
                  port_value: 80
      #health_checks:
      #- timeout: 0.2s
      #  interval: 1s
      #  healthy_threshold: 1
      #  unhealthy_threshold: 3
      #  grpc_health_check: {}
